--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-"<!DOCTYPE html><html><head><title>Odin Recipes</title></head><body><h1>Welcome to Odin Recipes</h1></body></html>" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <title>Odin Recipes</title>
+</head>
+<body>
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li>
+            <a href="recipes/lasagna.html">Lasagna</a>
+        </li>
+    </ul>
+</body>
+</html>
