--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li>
-            <a href="recipes/lasagna.html">Lasagna</a>
-        </li>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/chicken-curry.html">Chicken Curry</a></li>
+        <li><a href="recipes/pancakes.html">Pancakes</a></li>
     </ul>
 </body>
 </html>
